test(ui): SignUpControllerTest finished and small fixes in DeckControllerTest
Needed for maintaining high test coverage and verify the code

Co-authored-by: Ailin Anjadatter Tinglum <ailinat@stud.ntnu.no>

#134